<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Mahjong</string>
	<string name="main_title">Mahjong</string>
	<string name="new_game_label">New Game</string>
	<string name="about_label">About</string>
	<string name="settings_label">Settings</string>
	<string name="exit_label">Exit</string>
	<string name="game_title">Game</string>
	<string name="kyoku_ton_1">East 1R</string>
	<string name="kyoku_ton_2">East 2R</string>
	<string name="kyoku_ton_3">East 3R</string>
	<string name="kyoku_ton_4">East 4R</string>
	<string name="kyoku_nan_1">South 1R</string>
	<string name="kyoku_nan_2">South 2R</string>
	<string name="kyoku_nan_3">South 3R</string>
	<string name="kyoku_nan_4">South 4R</string>

	<string name="kaze_ton">E</string>
	<string name="kaze_nan">S</string>
	<string name="kaze_sya">W</string>
	<string name="kaze_pei">N</string>

	<string name="space">" "</string>
	<string name="multi">x</string>

	<string name="button_menu">Menu</string>
	<string name="button_reach">Reach</string>
	<string name="button_ron">Ron</string>
	<string name="button_tsumo">Tsumo</string>
	<string name="button_pon">Pong</string>
	<string name="button_chii">Chi</string>
	<string name="button_kan">Kang</string>

	<string name="han">han</string>
	<string name="fu">fu</string>
	<string name="ten">points</string>

	<string name="yakuman">Yakuman</string>
	<string name="sanbaiman">Sanbaiman</string>
	<string name="baiman">Baiman</string>
	<string name="haneman">Haneman</string>
	<string name="mangan">Mangan</string>

	<string name="info_reach">Reach</string>
	<string name="info_ron">Ron</string>
	<string name="info_tsumo">Tsumo</string>
	<string name="info_ryuukyoku">drawn</string>
	<string name="info_end">End</string>

	<string name="yaku_tanyao">All simples</string>
	<string name="yaku_pinfu">No-points hand</string>
	<string name="yaku_ipeikou">One set of identical sequences</string>
	<string name="yaku_reach">Ready hand</string>
	<string name="yaku_ippatu">One-shot</string>
	<string name="yaku_tumo">Self pick</string>
	<string name="yaku_doubleton">Double East Wind</string>
	<string name="yaku_ton">East Wind</string>
	<string name="yaku_doublenan">Double South Wind</string>
	<string name="yaku_nan">South Wind</string>
	<string name="yaku_sya">West Wind</string>
	<string name="yaku_pei">North Wind</string>
	<string name="yaku_haku">White Dragon</string>
	<string name="yaku_hatu">Green Dragon</string>
	<string name="yaku_cyun">Red Dragon</string>
	<string name="yaku_haitei">Last tile from the wall</string>
	<string name="yaku_houtei">Last tile from the wall</string>
	<string name="yaku_rinsyan">Going out on a supplemental tile from the dead wall</string>
	<string name="yaku_cyankan">Robbing a quad to go out</string>
	<string name="yaku_doublereach">Double-ready</string>
	<string name="yaku_teetoitu">Seven pairs</string>
	<string name="yaku_cyanta">Terminal or honor in each set</string>
	<string name="yaku_ikkituukan">Straight through</string>
	<string name="yaku_sansyokudoujyun">Three colour straight</string>
	<string name="yaku_sansyokudoukou">Three colour triplets</string>
	<string name="yaku_toitoi">All triplet hand</string>
	<string name="yaku_sanankou">Three concealed triplets</string>
	<string name="yaku_sankantu">Three quads</string>
	<string name="yaku_ryanpeikou">Two sets of identical sequences</string>
	<string name="yaku_honitu">One suit plus honors</string>
	<string name="yaku_juncyan">Terminal in each set</string>
	<string name="yaku_syousangen">Little three dragons</string>
	<string name="yaku_honroutou">All terminals and honors</string>
	<string name="yaku_tinitu">Single suit hand</string>
	<string name="yaku_suuankou">Four concealed triplets</string>
	<string name="yaku_suukantu">Four quads</string>
	<string name="yaku_daisangen">Big three dragons</string>
	<string name="yaku_syousuushi">Little four winds</string>
	<string name="yaku_daisuushi">Big four winds</string>
	<string name="yaku_tuuisou">All honors</string>
	<string name="yaku_chinroutou">All terminals</string>
	<string name="yaku_ryuuisou">All green</string>
	<string name="yaku_cyuurennpoutou">Nine gates</string>
	<string name="yaku_kokushi">Thirteen orphans</string>
	<string name="yaku_tenhou">Heavenly hand</string>
	<string name="yaku_tihou">Earthly hand</string>
	<string name="yaku_dora">Dora</string>
	<string name="yaku_nagashimangan">All terminal and honor discards</string>

	<string name="settings_title">Andjong settings</string>
	<string name="settings_kuitan">All simples(made by "eating" discards)</string>
	<string name="hints_title">Red tiles</string>
    <string name="endless">Endless</string>
    <string name="styles">Styles</string>
    <string name="secondfan">two Fans to Hu</string>
    <string name="debug">Debug</string>
	<string name="settings_kyokusuu">Rounds</string>

	<string name="rounds_tonpuu">East 4R</string>
	<string name="rounds_hanchan">South 4R</string>

	<string name="about_title">About Andjong</string>
	<string name="about_text">\
Andjong is Open Source Software Mahjong Game.\n
･Support English.\n
･320X480 only.\n
･Touching lower half of the screen or using \'Left\' and \'Right\' key to select tile.\n
･Touching upper half of the screen or using \'Confirm\' key to throw the selected tile.\n
･Clicking the displayed menu (located at bottom of screen when available) to do an action.\n
･Touching within the screen or using \'Confirm\' key to skip info screens.\n 
</string>
</resources>
