<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<ListPreference android:key="settings_kyokusuu"
		android:title="@string/settings_kyokusuu" android:dialogTitle="@string/settings_kyokusuu"
		android:entries="@array/list_entries" android:entryValues="@array/list_entryvalues" />

	<CheckBoxPreference android:key="settings_kuitan"
		android:title="@string/settings_kuitan" android:defaultValue="true" />

	<CheckBoxPreference android:key="hints"
		android:title="@string/hints_title" android:defaultValue="true" />

    <CheckBoxPreference android:key="endless"
        android:title="@string/endless" android:defaultValue="true" />

    <ListPreference android:key="styles"
        android:title="@string/styles" android:dialogTitle="@string/styles"
        android:entries="@array/style_entries" android:entryValues="@array/style_entryvalues" />

</PreferenceScreen>